gcc/testsuite/g++.dg/inherit/error3.C
//PR c++/27316

struct A {};

struct B : A
!               // { dg-error "token" }
{};

struct B : A
!               // { dg-error "token" }
{};
